fix: resolve PSU coordinate visibility by implementing intelligent UTM detection and L.geoJSON rendering

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -782,6 +782,9 @@ video {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.ml-0\.5 {
+  margin-left: 0.125rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -1455,9 +1458,6 @@ video {
 .whitespace-nowrap {
   white-space: nowrap;
 }
-.break-all {
-  word-break: break-all;
-}
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1586,6 +1586,9 @@ video {
 .border-emerald-500 {
   --tw-border-opacity: 1;
   border-color: rgb(16 185 129 / var(--tw-border-opacity, 1));
+}
+.border-emerald-500\/20 {
+  border-color: rgb(16 185 129 / 0.2);
 }
 .border-gray-200 {
   --tw-border-opacity: 1;
@@ -1780,6 +1783,9 @@ video {
 .bg-emerald-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(16 185 129 / var(--tw-bg-opacity, 1));
+}
+.bg-emerald-500\/10 {
+  background-color: rgb(16 185 129 / 0.1);
 }
 .bg-emerald-600 {
   --tw-bg-opacity: 1;
@@ -2137,9 +2143,6 @@ video {
 .pr-12 {
   padding-right: 3rem;
 }
-.pr-16 {
-  padding-right: 4rem;
-}
 .pr-2 {
   padding-right: 0.5rem;
 }
@@ -2368,10 +2371,6 @@ video {
 .text-blue-950 {
   --tw-text-opacity: 1;
   color: rgb(23 37 84 / var(--tw-text-opacity, 1));
-}
-.text-emerald-100 {
-  --tw-text-opacity: 1;
-  color: rgb(209 250 229 / var(--tw-text-opacity, 1));
 }
 .text-emerald-300\/60 {
   color: rgb(110 231 183 / 0.6);
@@ -2669,14 +2668,6 @@ video {
 }
 .shadow-blue-950\/20 {
   --tw-shadow-color: rgb(23 37 84 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-emerald-500\/20 {
-  --tw-shadow-color: rgb(16 185 129 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-emerald-500\/5 {
-  --tw-shadow-color: rgb(16 185 129 / 0.05);
   --tw-shadow: var(--tw-shadow-colored);
 }
 .shadow-emerald-600\/10 {
@@ -3001,6 +2992,10 @@ video {
 .hover\:bg-amber-50\/30:hover {
   background-color: rgb(255 251 235 / 0.3);
 }
+.hover\:bg-amber-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1));
+}
 .hover\:bg-amber-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1));
@@ -3038,6 +3033,9 @@ video {
 .hover\:bg-emerald-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 250 229 / var(--tw-bg-opacity, 1));
+}
+.hover\:bg-emerald-500\/20:hover {
+  background-color: rgb(16 185 129 / 0.2);
 }
 .hover\:bg-emerald-600:hover {
   --tw-bg-opacity: 1;
@@ -3303,10 +3301,6 @@ video {
   --tw-scale-y: 0.98;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.group:focus-within .group-focus-within\:text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
-}
 .group:focus-within .group-focus-within\:text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
@@ -3409,10 +3403,6 @@ video {
 .group:hover .group-hover\:bg-blue-50\/5 {
   background-color: rgb(239 246 255 / 0.05);
 }
-.group:hover .group-hover\:bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
-}
 .group:hover .group-hover\:bg-emerald-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 250 229 / var(--tw-bg-opacity, 1));
@@ -3435,10 +3425,6 @@ video {
 .group:hover .group-hover\:text-blue-900 {
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity, 1));
-}
-.group:hover .group-hover\:text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
@@ -3809,10 +3795,6 @@ video {
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.dark\:shadow-black\/20:is(.dark *) {
-  --tw-shadow-color: rgb(0 0 0 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
-}
 .dark\:hover\:border-slate-700:hover:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(51 65 85 / var(--tw-border-opacity, 1));
@@ -3831,9 +3813,6 @@ video {
 }
 .dark\:hover\:bg-blue-900\/10:hover:is(.dark *) {
   background-color: rgb(30 58 138 / 0.1);
-}
-.dark\:hover\:bg-blue-900\/5:hover:is(.dark *) {
-  background-color: rgb(30 58 138 / 0.05);
 }
 .dark\:hover\:bg-emerald-700:hover:is(.dark *) {
   --tw-bg-opacity: 1;
@@ -3936,10 +3915,6 @@ video {
 
   .md\:w-7\/12 {
     width: 58.333333%;
-  }
-
-  .md\:w-80 {
-    width: 20rem;
   }
 
   .md\:w-96 {
